	PR tree-optimization/32589 	* doc/tree-ssa.texi (Rough GIMPLE Grammar): Add missing rule. 	* tree-gimple.c (is_gimple_min_invariant): Clarify head comment. 	* tree-ssa-propagate.c (valid_gimple_expression_p): New 	predicate, extracted from... 	(set_rhs): ...here.  Call it for the expression on entry. 	* tree-ssa-propagate.h (valid_gimple_expression_p): Declare. 	* tree-ssa-sccvn.c: Include tree-ssa-propagate.h. 	(simplify_binary_expression): Use valid_gimple_expression_p 	to validate the simplification. 	* Makefile.in (tree-ssa-sccvn.o): Depends on tree-ssa-propagate.h.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@126545 138bc75d-0d04-0410-961f-82ee72b054a4