gcc/testsuite/gnat.dg/invariant_index.ads
@@ -1,0 +1,8 @@
+package Invariant_Index is
+
+   Name_Buffer : String (1 .. 100);
+   Name_Len : Natural;
+
+   procedure Proc (S : String);
+
+end Invariant_Index;
